--- a/index.html
+++ b/index.html
@@ -279,17 +279,8 @@
 				<th><img src="mail.png" alt="email" class="contactimages"></th>
 				<th><img src="phone.png" alt="phone" class="contactimages"></th>
 			</tr>
-			<tr>
-				<th>
-					Work address:
-					<br>742 Evergreen Terrace, Springfield, Oregon, 97403</th>
-				<th>
-					Email DITTO PIKACHU here:
-					<br><a href = "mailto:dittopikachu@gmail.com">dittopikachu@gmail.com</a>
-				</th>
-				<th>Mobile:
-					<br>3102-310-771
-				</th>
+					Email Elliott Robins here:
+					<br><a href = "mailto:elliott.m.robins@gmail.com"elliott.m.robins@gmail.com</a>
 			</tr>
 		</table>
 	</div>
