--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 		<div class="compilationinformation"> <!-- #ID# #COMPINFO# -->
 			<b>Compilation information</b>
 			<br>Website made in Adobe Dreamweaver and Visual Studio Code.
-			<br>HTML and CSS code written by Ditto Pikachu (INSERT NAME HERE).
+			<br>HTML and CSS code written by Elliott Robins.
 		</div>
 		<table class="contacttable"> <!-- #ID# #CONTACT# -->
 			<caption><h2>Contact Information</h2></caption>
