--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </ul>
        <b>The deliverables contains content from the following subjects:</b>
         <ul>
-            <li>Cartography 2 (GEOM2079)</li>
+            <li>Terrestrial Surveying</li>
             <li>Applied Geospatial Techniques (GEOM2083)</li>
         </ul>
        <b>Special thanks to the following people who have helped me make this website with their expertise and guidance:</b>
