--- a/index.html
+++ b/index.html
@@ -158,33 +158,33 @@
     <div class="skills">
         <table class="icontable">
             <tr>
-                <td><img src="12d-model.jpg" class="iconimages"></td>
+                <td><img src="12d-model.jpg" width="auto" height="100px" class="image"></td>
 				<td>12d Model</td>
-                <td><img src="Leica-Logo.png" class="iconimages"></td>
+                <td><img src="Leica-Logo.png" width="auto" height="100px" class="image"></td>
 				<td>Lieca</td>
             </tr>
             <tr>
-                <td><img src="autocad-logo-69326D7728-seeklogo.com.png" class="iconimages"></td>
+                <td><img src="autocad-logo-69326D7728-seeklogo.com.png" width="auto" height="100px" class="image"></td>
 				<td>AutoCAD</td>
-                <td><img src="images.jfif" class="iconimages"></td>
+                <td><img src="images.jfif" width="auto" height="100px" class="image"></td>
 				<td>Trimble Business Center</td>
             </tr>
             <tr>
-                <td><img src="cropped-12d-synergy-favicon.png" class="iconimages"></td>
+                <td><img src="cropped-12d-synergy-favicon.png" width="auto" height="100px" class="image"></td>
 				<td>12d synergy database management</td>
-                <td><img src="Icons/drone-icon.png" class="iconimages"></td>
+                <td><img src="Icons/drone-icon.png" width="auto" height="100px" class="image"></td>
 				<td>Photogrammetry and Drone Mapping</td>
             </tr>
             <tr>
-                <td><img src="Icons/web-design.png" class="iconimages"></td>
+                <td><img src="Icons/web-design.png" width="auto" height="100px" class="image"></td>
 				<td>Web Design: HTML & CSS</td>
-                <td><img src="Icons/webgis.png" class="iconimages"></td>
+                <td><img src="Icons/webgis.png" width="auto" height="100px" class="image"></td>
 				<td>Web GIS</td>
             </tr>
             <tr>
-                <td><img src="Icons/python-icon.png" class="iconimages"></td>
+                <td><img src="Icons/python-icon.png" width="auto" height="100px" class="image"></td>
 				<td>Python Programming</td>
-                <td><img src="Icons/sql.png" class="iconimages"></td>
+                <td><img src="Icons/sql.png" width="auto" height="100px" class="image"></td>
 				<td>SQL Database Management</td>
             </tr>
         </table>
