--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 				<th><img src="mail.png" alt="email" class="contactimages"></th>
 				<th><img src="phone.png" alt="phone" class="contactimages"></th>
 			</tr>
-					Email Elliott Robins here:
+					Email Elliot Robins here:
 					<br><a href = "mailto:elliott.m.robins@gmail.com"elliott.m.robins@gmail.com</a>
 			</tr>
 		</table>
