--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         require an in depth understand of both civil and structural engineering surveying.
 		</p>
 		<p>
-		My own personal hobbies include travelling and playing sports!
+		My own personal hobbies include travelling and playing sports!!
 		</p>	
 	<img src="IMG_E3571.JPG" height="500px" width="auto" class="image"> 
 	<!-- #ID# #SELFPORTRAIT# Change the img src name to match the name of your own self-portrait or delete my image and name your image the same name and place it in the same folder -->
